--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ description: >-
 # baseurl: "" # e.g. /blog
 # url: ""     # e.g. http://example.com
 google_analytics: "UA-89852122-6"
-author:           "Cicak Bin Kadal"
-address:          "Pamulang"
+author:           "Mardianto"
+address:          "Jambi"
 sitemap:          "true"
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
-urlweb:           "https://cbkadal.github.io/os211/"
+urlweb:           "https://mardianto-byte.github.io/os211/"
 urlcontact:       "TBS"
-urlgithub:        "https://github.com/cbkadal/os211/"
-urlghpage:        "https://cbkadal.github.io/os211/"
+urlgithub:        "https://github.com/mardianto-byte/os211/"
+urlghpage:        "https://mardianto-byte.github.io/os211/"
 keywords:         "jekyll, testing"
 github:           [metadata]
 
